Deploiement-kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
status:
  phase: Active
