Deploiement-kubernetes/wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    name: wordpress
    env: production
    team: devops
    release: v1.0
  namespace: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress
    tier: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
